--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><h1 id="here-is-my-research-life-in-deep-learning">Here is My Research (Life) in Deep learning</h1>
 
-<p><img src="/blog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<ul>
+  <li>
+    <h3 id="interested-in-nlp-and-data-any-science">interested in NLP🔥 and Data (any) Science💣</h3>
+  </li>
+  <li>
+    <h3 id="the-concept-of-deep-learning-is-easier-than-you-might-think-but-nobody-knows-what-were-doing">the concept of Deep Learning is easier than you might think <strong>But</strong> nobody knows what we’re doing!!!</h3>
+  </li>
+</ul>
 
 <h1 id="posts">Posts</h1>
 
