--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 # Here is My Research (Life) in Deep learning
   
-  - ### interested in NLP🔥 and Data (any) Science💣
-  - ### the concept of Deep Learning is easier than you might think **But** nobody knows what we're doing!!!
+  - ### Interested in NLP🔥,Vison🚀 and Data Science💣
+  - ### The concept of Deep Learning is easier than you might think **But** nobody knows what we're doing!!!
 
 # Posts
