--- a/page2/index.html
+++ b/page2/index.html
@@ -71,10 +71,10 @@ window.onload = wrap_img;
 
 <ul>
   <li>
-    <h3 id="interested-in-nlp-and-data-any-science">interested in NLP🔥 and Data (any) Science💣</h3>
+    <h3 id="interested-in-nlpvison-and-data-science">Interested in NLP🔥,Vison🚀 and Data Science💣</h3>
   </li>
   <li>
-    <h3 id="the-concept-of-deep-learning-is-easier-than-you-might-think-but-nobody-knows-what-were-doing">the concept of Deep Learning is easier than you might think <strong>But</strong> nobody knows what we’re doing!!!</h3>
+    <h3 id="the-concept-of-deep-learning-is-easier-than-you-might-think-but-nobody-knows-what-were-doing">The concept of Deep Learning is easier than you might think <strong>But</strong> nobody knows what we’re doing!!!</h3>
   </li>
 </ul>
 
